# controllers/pictures_controller.go
@@ -16,17 +16,15 @@ func NewPictureController(service *services.PictureService) *PictureController {
 	return &PictureController{Service: service}
 }
 
-// @BasePath /api/v1
 // GetPictures godoc
-// @Schemes
+//
 //	@Summary		Get all pictures
 //	@Description	Get all pictures
 //	@Tags			pictures
 //	@Accept			json
 //	@Produce		json
-//	@Success		200	{object}	[]Pictures
+//	@Success		200 {object}	models.Pictures
 //	@Router			/pictures [get]
-
 func (pc *PictureController) GetPictures(ctx *gin.Context) {
 	limit := 10 // default limit
 	pictures, err := pc.Service.GetAllPictures(limit)
@@ -39,15 +37,15 @@ func (pc *PictureController) GetPictures(ctx *gin.Context) {
 }
 
 // GetPictureById godoc
+//
 //	@Summary		Get picture by id
 //	@Description	Get picture by id
 //	@Tags			pictures
 //	@Accept			json
 //	@Produce		json
-//	@Param			id	binary	string	true	"Picture ID"
-//	@Success		200	{object}	Pictures
+//	@Param			id path string true "Picture ID"
+//	@Success		200	{object}	models.Pictures
 //	@Router			/pictures/{id} [get]
-
 func (pc *PictureController) GetPictureById(ctx *gin.Context) {
 	id := ctx.Param("id")
 	picture, err := pc.Service.GetPictureById(id)
@@ -60,6 +58,7 @@ func (pc *PictureController) GetPictureById(ctx *gin.Context) {
 }
 
 // CountPicture godoc
+//
 //	@Summary		Count pictures
 //	@Description	Count pictures
 //	@Tags			pictures
@@ -67,7 +66,6 @@ func (pc *PictureController) GetPictureById(ctx *gin.Context) {
 //	@Produce		json
 //	@Success		200	{object}	int64
 //	@Router			/pictures/count [get]
-
 func (pc *PictureController) CountPicture(ctx *gin.Context) {
 	count, err := pc.Service.CountPictures()
 	if err != nil {
@@ -79,14 +77,14 @@ func (pc *PictureController) CountPicture(ctx *gin.Context) {
 }
 
 // GetPicturesPaginated godoc
+//
 //	@Summary		Get pictures paginated
 //	@Description	Get pictures paginated
 //	@Tags			pictures
 //	@Accept			json
 //	@Produce		json
-//	@Success		200	{object}	[]Pictures
+//	@Success		200 {object}	models.Pictures
 //	@Router			/pictures/paginated [get]
-
 func (pc *PictureController) GetPicturesPaginated(ctx *gin.Context) {
 	pictures, err := pc.Service.GetPicturesPaginated(0, 12)
 	if err != nil {
