# docs/swagger.json
@@ -1,12 +1,131 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "picture API",
-        "title": "Picture API",
-        "contact": {},
-        "version": "2.0"
+        "contact": {}
     },
-    "host": "127.0.0.1:8080",
-    "basePath": "/api/v1",
-    "paths": {}
+    "paths": {
+        "/pictures": {
+            "get": {
+                "description": "Get all pictures",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pictures"
+                ],
+                "summary": "Get all pictures",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Pictures"
+                        }
+                    }
+                }
+            }
+        },
+        "/pictures/count": {
+            "get": {
+                "description": "Count pictures",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pictures"
+                ],
+                "summary": "Count pictures",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                }
+            }
+        },
+        "/pictures/paginated": {
+            "get": {
+                "description": "Get pictures paginated",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pictures"
+                ],
+                "summary": "Get pictures paginated",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Pictures"
+                        }
+                    }
+                }
+            }
+        },
+        "/pictures/{id}": {
+            "get": {
+                "description": "Get picture by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pictures"
+                ],
+                "summary": "Get picture by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Picture ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Pictures"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.Pictures": {
+            "type": "object",
+            "properties": {
+                "added_date": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "filename": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        }
+    }
 }
